# github-repo-manager

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
docs/: api.md  excel.md  index.md  tokens.md  tui.md  usage.md
docs/superpowers/specs/: 2026-05-09-tui-edit-description-design.md
src/github_repo_manager/: __init__.py  cli.py  client.py  excel.py  tui.py
src/gman/: bulk.py  capabilities.py  cli.py  client.py  details.py  tui.py
tests/: conftest.py  test_bulk.py  test_capabilities.py  test_cli.py  test_client.py  test_details.py  test_tui_logic.py
